--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://use.typekit.net/udp8bva.css">
         <link href="styles.css" rel="stylesheet" type="text/css">
         <meta charset="utf-8">
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/fc9abeccf77bedd0a81a62bed/c90f1d523c4f4aa806cfc1d9d.js");</script>
     </head>
     <body>
         <div id="wrapper">
