Fix mailchimp integration
Embed form w/ email follow-up

--- a/index.html
+++ b/index.html
@@ -37,12 +37,35 @@
                         <li>And much, much more...</li>
                     </ul>
                     <h3>YES! I Want To Increase Trust, Sway Purchasing Decisions &amp; Increase Referrals!</h3>
-                    <p>Enter your name and email to receive your FREE Guide:</p>
-                    <form method="get" action="Guide_To_Creating_An_Irresistible_Client_Hero_Story.pdf">
-                        <input type="text" id="name" name="name" placeholder="Your Name">
-                        <input type="email" id="email" name="emailaddress" placeholder="Your Email Address">
-                        <input type="button" id="downloadGuide" value="Download Your Free Guide Now">
-                    </form>
+                                   <div id="mc_embed_shell">
+
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://clientherostory.us4.list-manage.com/subscribe/post?u=fc9abeccf77bedd0a81a62bed&amp;id=7a414df37c&amp;f_id=00f7b2e8f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_self" novalidate="">
+                            <div id="mc_embed_signup_scroll">
+                                <h5>Enter your name and email to receive your FREE Guide:</h5>
+                                <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
+                                            class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                        class="required email" id="mce-EMAIL" required="" value=""><span
+                                        id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+                                <div class="mc-field-group"><label for="mce-FNAME">First Name </label><input type="text"
+                                        name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                                <div hidden=""><input type="hidden" name="tags" value="1749566"></div>
+                                <div id="mce-responses" class="clearfalse">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
+                                        name="b_fc9abeccf77bedd0a81a62bed_7a414df37c" tabindex="-1" value=""></div>
+                                <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                        class="button downloadGuide" value="Download Your Free Guide Now"></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                    
                 </section>
             </main>
             <footer>
